// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Unbound Action can be called 1`] = `
[
  {
    "keys": {},
    "path": "unboundAction",
  },
]
`;

exports[`Unbound Action can be called 2`] = `"This is my action response"`;

exports[`Unbound Action can call the base interface 1`] = `
[
  {
    "keys": {},
    "path": "unboundActionThatFetchData",
  },
]
`;

exports[`Unbound Action can call the base interface 2`] = `
[
  {
    "BooleanProperty": false,
    "Currency": "",
    "DescriptionProperty": "",
    "HasActiveEntity": true,
    "HasDraftEntity": false,
    "ID": 2,
    "IsActiveEntity": true,
    "NameProperty": "",
    "NumberProperty": 0,
    "Progress": 0,
    "TitleProperty": "This is my Title",
  },
]
`;
